<resources>
    <string name="app_name">SmartAlarmClock</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="powerOn">Power On</string>
    <string name="powerOff">Power Off</string>
    <string name="timeStartCheck">Monitor Time Start</string>
    <string name="timeEndCheck">Monitor Time End</string>
    <string name="reset">Reset Smart Plug</string>
    <string name="enable_monitor">Active Monitoring</string>
    <string name="monitored_plug">Monitored SmartPlug</string>
    <string name="phoneCalled">Phone Called</string>
    <string name="phoneCallAt">"Phone called at: "</string>
    <string name="saveSettings">Save</string>
    <string name="error_save_settings">Error saving settings</string>
    <string name="error_find_smartPlug">Cannot Find SmartPlug</string>
    <string name="get_info">Info</string>
    <string name="unknown_info">Unknown Info</string>
    <string name="smartPlugInfo">Info: hw:%s, Name:%s, On:%s</string>
    <string name="phone_call_at">Phone Called At: %s\nSmartPlug is: %s</string>
    <string name="phone_called">Intercepted phone call - SmartPlug activated</string>
    <string name="plugOn">On</string>
    <string name="plugOff">Off</string>
    <string name="alarmClock">Alarm Clock</string>
    <string name="alarmTime">Alarm Time</string>
    <string name="alarm_call">Alarm at: %s</string>
    <string name="debugFlag">Debug</string>
</resources>