<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="381dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAlarmClock"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:text="@string/alarmClock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editAlarmTime"
        tools:text="@string/alarmClock" />

    <EditText
        android:id="@+id/editAlarmTime"
        android:layout_width="131dp"
        android:layout_height="61dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAlarmTime" />

    <TextView
        android:id="@+id/textAlarmTime"
        android:layout_width="366dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <Button
        android:id="@+id/btnUpdateAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:text="@string/saveSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmTime"
        tools:text="@string/saveSettings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swDebugFlag"
        android:layout_width="153dp"
        android:layout_height="38dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="52dp"
        android:text="@string/debugFlag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swAlarmClock" />
</androidx.constraintlayout.widget.ConstraintLayout>